# memory-dumper

./: .gitignore  Makefile  README.md  iface.h  index.html  mem_dumper.c  meson.build  params.json  utils.c
libs/cpp-bitstring/: Bits.h  Utils.h
plugins/: .gitignore  cwf.cpp  meson.build  pdf.cpp  png.cpp  swf.c  swf.cpp  zwf.cpp
src/: MemoryDumper.cpp  MemoryDumper.h  iface.h
